<resources>
    <string name="app_name">ToApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="title_activity_new_todo">NewTodoActivity</string>
    <string name="create_button_text">Create</string>
    <string name="title_label_text">Title</string>
    <string name="title_input_label">Title</string>
    <string name="description_input_label">Description</string>
    <string name="favourite_input_label">Favourite</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_mail">Enter a valid email address</string>
    <string name="invalid_password">Password must be 6 numbers</string>
    <string name="login_failed">Wrong email or password</string>
    <string name="authentication_progress">Verifying user ...</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="done_label">Done</string>
    <string name="remove_contact">Remove</string>
    <string name="add_contact">Add</string>
    <string name="sort_by_fav">SortBy Fav.</string>
    <string name="sort_by_date">SortBy Date.</string>
    <string name="menu_remote_delete_all">Remote delete</string>
    <string name="menu_local_delete_all">Local delete</string>
    <string name="menu_synchronize">Synchronize</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_modify_todo">ModifyTodoActivity</string>
</resources>
