<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.toapp.MainActivity">
    <item
        android:id="@+id/sortBy_Favourite"
        android:orderInCategory="100"
        android:title="@string/sort_by_fav"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortBy_Date"
        android:orderInCategory="100"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/remote_delete_all"
        android:title="@string/menu_remote_delete_all"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/local_delete_all"
        android:title="@string/menu_local_delete_all"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/synchronize"
        android:title="@string/menu_synchronize"
        app:showAsAction="never"
        />


</menu>
