<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ModifyTodoActivity"
    tools:showIn="@layout/activity_modify_todo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="32dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/modify_title_input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:text="@string/title_input_label"
            />

        <EditText
            android:id="@+id/modify_description_input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:text="@string/description_input_label" />

        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/modify_input_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:onClick="onTimeClicked"
                android:text="Time"
                android:textSize="25dp"
                />

            <TextView
                android:id="@+id/modify_input_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Date"
                android:ems="10"
                android:textSize="25dp"
                android:onClick="onDateClicked"
                />

        </LinearLayout>

        <Switch
            android:id="@+id/modify_favourite_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/favourite_input_label" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>